<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="vmFragmentCovidInfo"
            type="com.android.dubaicovid19.view.viewModels.CovidInfoViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="locale"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/layoutTopMenu"
            android:layout_width="match_parent"
            android:background="@drawable/page_header"
            android:orientation="vertical"
            android:layoutDirection="locale"
            android:layout_height="60dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/logoPolice"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/dubai_police_small"/>
                <TextView
                    android:layout_toRightOf="@+id/logoPolice"
                    style="@style/font_large"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"
                    android:text="@string/dubai_police"
                    android:layout_weight="2"/>
                <ImageView
                    android:id="@+id/btnHome"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="10dp"
                    android:src="@mipmap/new_home"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/header_border"/>
            </RelativeLayout>

        </LinearLayout>
        <TextView
            style="@style/font_large"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/covid_information"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:id="@+id/rbdCovid">
            <RadioButton
                style="@style/font_medium"
                android:id="@+id/rbconfirmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:buttonTint="@color/green"
                android:text="@string/rdb_confirmed"
                android:visibility="visible"
                android:textStyle="bold" />
            <RadioButton
                style="@style/font_medium"
                android:id="@+id/rbsuspected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:buttonTint="@color/green"
                android:text="@string/rdb_Suspected"
                android:textStyle="bold" />
            <RadioButton
                style="@style/font_medium"
                android:id="@+id/rbHomeQuarantined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:buttonTint="@color/green"
                android:text="@string/rdb_home_quarantined"
                android:textStyle="bold" />
            <RadioButton
                style="@style/font_medium"
                android:id="@+id/rbQuarantinFacility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:buttonTint="@color/green"
                android:text="@string/rdb_facility_quarantined"
                android:textStyle="bold" />
            <RadioButton
                style="@style/font_medium"
                android:id="@+id/rbSafe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:buttonTint="@color/green"
                android:text="@string/rdb_Safe"
                android:checked="true"
                android:textStyle="bold" />
        </RadioGroup>
        <Button
            android:id="@+id/btnCovid"
            android:background="@drawable/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:text="@string/update"/>
    </LinearLayout>
</layout>