<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vmFragmentUserRegistration"
            type="com.android.dubaicovid19.view.viewModels.UserRegistrationViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/layoutTopMenu"
            android:layout_width="match_parent"
            android:background="@drawable/page_header"
            android:orientation="vertical"
            android:layoutDirection="locale"
            android:layout_height="60dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/logoPolice"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/dubai_police_small"/>
                <TextView
                    android:layout_toRightOf="@+id/logoPolice"
                    style="@style/font_large"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"
                    android:text="@string/dubai_police"
                    android:layout_weight="2"/>
                <ImageView
                    android:id="@+id/btnHome"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="10dp"
                    android:src="@mipmap/new_home"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/header_border"/>
            </RelativeLayout>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    style="@style/font_large"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user_registration"/>

                <TextView
                    style="@style/font_medium"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>
                <com.android.dubaicovid19.view.custom.CleanableEditText
                    style="@style/font_medium"
                    android:background="@drawable/editbox_background"
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:lines="1"
                    android:maxLength="100"
                    android:layout_marginHorizontal="10dp"
                    android:padding="5dp"
                    android:textColor="@color/text"
                    android:textAlignment="viewStart"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:id="@+id/rbdIDProof">
                    <RadioButton
                        style="@style/font_medium"
                        android:id="@+id/rbEID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/green"
                        android:checked="true"
                        android:text="@string/emirate"
                        android:visibility="visible"
                        android:layout_weight="1"
                        android:textStyle="bold" />
                    <RadioButton
                        style="@style/font_medium"
                        android:id="@+id/rbPassport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/green"
                        android:text="@string/passport"
                        android:textStyle="bold" />
                </RadioGroup>
                <com.android.dubaicovid19.view.custom.CleanableEditText
                    style="@style/font_medium"
                    android:id="@+id/editEID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/editbox_background"
                    android:lines="1"
                    android:maxLength="20"
                    android:padding="5dp"
                    android:inputType="number"
                    android:textColor="@color/text"
                    android:textAlignment="gravity"/>
                <com.android.dubaicovid19.view.custom.CleanableEditText
                    style="@style/font_medium"
                    android:id="@+id/editPassport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/editbox_background"
                    android:lines="1"
                    android:maxLength="20"
                    android:padding="5dp"
                    android:visibility="gone"
                    android:textAlignment="gravity"/>

                <TextView
                    style="@style/font_medium"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_no"/>
                <com.android.dubaicovid19.view.custom.CleanableEditText
                    style="@style/font_medium"
                    android:id="@+id/editMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:lines="1"
                    android:maxLength="15"
                    android:textAlignment="viewStart"
                    android:layout_marginHorizontal="10dp"
                    android:padding="5dp"
                    android:inputType="number"
                    android:textColor="@color/text"
                    android:background="@drawable/editbox_background"/>

                <TextView
                    style="@style/font_medium"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>
                <com.android.dubaicovid19.view.custom.CleanableEditText
                    style="@style/font_medium"
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:lines="1"
                    android:textAlignment="viewStart"
                    android:layout_marginHorizontal="10dp"
                    android:padding="5dp"
                    android:maxLength="100"
                    android:textColor="@color/text"
                    android:background="@drawable/editbox_background"/>

                <TextView
                    style="@style/font_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/location"/>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:weightSum="1">
                   <LinearLayout
                       android:id="@+id/layoutChooseLocation"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:orientation="horizontal">
                       <ImageView
                           android:layout_margin="5dp"
                           android:layout_width="30dp"
                           android:layout_height="30dp"
                           android:src="@drawable/location_on_map"/>
                       <TextView
                           style="@style/font_medium"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_margin="5dp"
                           android:text="@string/location_map"/>
                   </LinearLayout>
               </LinearLayout>
                <TextView
                    style="@style/font_medium"
                    android:id="@+id/editLocation"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:focusable="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/editbox_background"
                    android:paddingLeft="8dp"
                    android:maxLines="1"
                    android:minLines="1"
                    android:requiresFadingEdge="horizontal"
                    android:ellipsize="end"
                    android:editable="false"
                    android:singleLine="true"
                    android:textCursorDrawable="@null"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/search_location_hint"
                    android:drawablePadding="10dp"
                    android:textColor="@color/text"
                    android:drawableRight="@drawable/ic_search"/>

                <TextView
                    style="@style/font_medium"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:id="@+id/rbdGender">
                    <RadioButton
                        style="@style/font_medium"
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:buttonTint="@color/green"
                        android:checked="true"
                        android:text="@string/male"
                        android:visibility="visible"
                        android:layout_weight="1"
                        android:textStyle="bold" />
                    <RadioButton
                        style="@style/font_medium"
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:buttonTint="@color/green"
                        android:text="@string/female"
                        android:textStyle="bold" />
                    <RadioButton
                        style="@style/font_medium"
                        android:id="@+id/rbOthers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:buttonTint="@color/green"
                        android:text="@string/others"
                        android:textStyle="bold" />
                </RadioGroup>

                <TextView
                    style="@style/font_medium"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nationality"/>
                <TextView
                    android:id="@+id/edtNationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="16sp"
                    android:background="@drawable/editbox_background"
                    android:drawableEnd="@drawable/ic_chevron_down"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/text"
                    android:fontFamily="@font/dubai_font" />

                <TextView
                    style="@style/font_medium"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/age"/>
                <com.android.dubaicovid19.view.custom.CleanableEditText
                    style="@style/font_medium"
                    android:id="@+id/editAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:lines="1"
                    android:maxLength="3"
                    android:inputType="number"
                    android:textAlignment="viewStart"
                    android:layout_marginHorizontal="10dp"
                    android:padding="5dp"
                    android:textColor="@color/text"
                    android:background="@drawable/editbox_background"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>